--- a/index.html
+++ b/index.html
@@ -9,49 +9,72 @@
 </head>
 <body>
 <header>
+    <div class="top">
     <div class="logo">
-        <h1>Ancerion Programming</h1>
+        Ancerion Programming
     </div>
     <div class="links">
         <ul>
-            <li>Link 1</li>
-            <li>Link 2</li>
-            <li>Link 3</li>
+            <li><a href=https://www.youtube.com/watch?v=dQw4w9WgXcQ>Mystery Link 1</a></li>
+            <li><a href=https://www.youtube.com/watch?v=dQw4w9WgXcQ>Mystery Link 2</a></li>
+            <li><a href=https://www.youtube.com/watch?v=dQw4w9WgXcQ>Mystery Link 3</a></li>
         </ul>
     </div>
-    <div class="title">
+    </div>
+<div class="main">
+<div class="body">
+    <div class="title">Effective Coding
         <div class="desc">
-            Text goes here
-            <button>Sign up!</button>
+            My intention is to venture into the career that I have desired since I was young and learn to program effectively, for personal, business, and related uses.
+                <div><a href=https://www.youtube.com/watch?v=dQw4w9WgXcQ>
+                    <button>Sign up!</a>
+                    </button>
+                </div>
         </div>
+        </div>
+</div>
+    <img class="img1" src="images/waterfall.jpg"
+        alt="A rainforest house overlooks a strong current waterfall into the lagoon below."
+        >
     </div>
-    <div class="img1">
-        <img src="" alt="">
-    </div>
-</header>
 
-    <div class="h2">
-        <h2>Some random info.</h2>
+</header>
+        <div class="h2">
+        <h2>Places I would like to visit with my family</h2>
+    </div>
+<div class="imagerow">   
+    <div class="imageline">
+        <img src="images/lightning.jpg" alt="On a pitch black night, a single webbed streak of lightning strikes in the center of the landscape revealing calm waters surrounding a small town and shoreline."> 
+        <div class="text2">A beach town at night</div>
     </div>
     <div class="imageline">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-    </div>       
-    <div class="quote">
-            "I am become DEATH, Destroyer of Worlds."
+        <img src="images/cityscape.jpg" alt="A skyview of a large metropolis city well lit by morning sun and the lights and energy of people living their lives.">
+        <div class="text2">New York, Tokyo, Paris?</div>
     </div>
-
-<footer>
+    <div class="imageline">
+        <img src="images/mntnchurch.jpg" alt="On a hilltop a single monastery sits well lit by the warmth of the winter sun and provides necessary protection from the elements. Larger mountains and pine trees dot the landscape as the clouds demonstrate how high up the Point of View is.">
+        <div class="text2">Climb a Mountain, Go to Church</div>
+    </div>
+    <div class="imageline">
+        <img src="images/watercastle.jpg" alt="A long river runs up to a castle centered on the horizon.">
+        <div class="text2">Maybe its the OG Disney Castle?</div>
+    </div>  
+</div>     
+    <div class="quote">
+            "Some people just want to watch the world burn." 
+            <div style: justify-items:right;> -Joker, the funnyman</div>
+    </div>
     <div class="footer">
         <div class="text">
             
-            <h3>Call to action! It's time!</h3>
-
+            <h3>It's time to push the button!</h3>
+        I know you can't wait to find out what this button does!
+        </div>
+        <div><button>Sign up</button>
         </div>
     </div>
-
+<footer>
+    Copyright @ The Odin Project 2021
 </footer>
 
 </body>
