--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 </div>     
     <div class="quote">
             "Some people just want to watch the world burn." 
-            <div style: justify-items:right;> -Joker, the funnyman</div>
+            <div style: justify-items:right; font-style: italic;> -Joker, the funnyman</div>
     </div>
     <div class="footer">
         <div class="text">
